syntax = "proto3";

package com.apixio.datacatalog;

import "com/apixio/datacatalog/Address.proto";

message ContactInfo {
  Address address = 1;
  repeated Address alternateAddresses = 2;
  string primaryEmail = 3;
  repeated string alternateEmails = 4;
  TelephoneNumber primaryPhone = 5;
  repeated TelephoneNumber alternatePhones = 6;
}

message TelephoneNumber {
  string phoneNumber = 1;
  string TelephoneType = 2; //enum in model com.apixio.model.patient.TelephoneType
}